--- a/myConfluenceMacro/pom.xml
+++ b/myConfluenceMacro/pom.xml
@@ -35,7 +35,16 @@
 			<artifactId>ews-java-api</artifactId>
 			<version>2.0</version>
 		</dependency>
-        
+
+
+
+        <dependency>
+            <groupId>com.atlassian.sal</groupId>
+            <artifactId>sal-api</artifactId>
+            <version>2.0.17</version>
+            <scope>provided</scope> <!-- Uses the application's SAL instead of bundling it into the plugin. -->
+        </dependency>
+
 		<dependency>
             <groupId>com.atlassian.confluence</groupId>
             <artifactId>confluence</artifactId>
