--- a/myConfluenceMacro/pom.xml
+++ b/myConfluenceMacro/pom.xml
@@ -30,13 +30,12 @@
             <scope>test</scope>
         </dependency>
         
-		<dependency>
-			<groupId>com.microsoft.ews-java-api</groupId>
-			<artifactId>ews-java-api</artifactId>
-			<version>2.0</version>
-		</dependency>
-
-
+	<!--The open source EWS exchange tool that is used-->
+	<dependency>
+		<groupId>com.microsoft.ews-java-api</groupId>
+		<artifactId>ews-java-api</artifactId>
+		<version>2.0</version>
+	</dependency>
 
         <dependency>
             <groupId>com.atlassian.sal</groupId>
@@ -45,7 +44,7 @@
             <scope>provided</scope> <!-- Uses the application's SAL instead of bundling it into the plugin. -->
         </dependency>
 
-		<dependency>
+	<dependency>
             <groupId>com.atlassian.confluence</groupId>
             <artifactId>confluence</artifactId>
             <version>${confluence.version}</version>
@@ -120,7 +119,7 @@
                         <Import-Package>
                             org.springframework.osgi.*;resolution:="optional",
                             org.eclipse.gemini.blueprint.*;resolution:="optional",
-                          <!--  * -->
+                          <!--Required such that external dependencies are included-->
                            *;resolution:=optional
                         </Import-Package>
 
