Properly Merged with DayConverter

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-myConfluenceMacro/.idea/compiler.xml
-myConfluenceMacro/.idea/misc.xml
-myConfluenceMacro/.idea/modules.xml
-myConfluenceMacro/.idea/workspace.xml
-myConfluenceMacro/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-myConfluenceMacro/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-myConfluenceMacro/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
-myConfluenceMacro/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
-myConfluenceMacro/target/myConfluenceMacro-1.0.0-SNAPSHOT-tests.jar
-myConfluenceMacro/target/myConfluenceMacro-1.0.0-SNAPSHOT.jar
-myConfluenceMacro/target/myConfluenceMacro-1.0.0-SNAPSHOT.obr
-myConfluenceMacro/target/obr/myConfluenceMacro-1.0.0-SNAPSHOT.jar
-myConfluenceMacro/target/obr/obr.xml
-myConfluenceMacro/target/surefire-reports/TEST-ut.com.atlassian.tutorial.MyComponentUnitTest.xml
-myConfluenceMacro/target/surefire-reports/ut.com.atlassian.tutorial.MyComponentUnitTest.txt
-myConfluenceMacro/target/test-classes/META-INF/MANIFEST.MF
 *
+!myConfluenceMacro/pom.xml
+!myConfluenceMacro/myConfluenceMacro.iml
+!myConfluenceMacro/src/
