--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-/myConfluenceMacro/.idea
-/myConfluencMacro/target
-/myConfluenceMacro/out
+/myConfluenceMacro/.idea/*
+/myConfluencMacro/target/*
+/myConfluenceMacro/out/*
 .idea/kotlinc.xml
-.idea/libraries/
+.idea/libraries/*
 myConfluenceMacro/target/dependency-maven-plugin-markers/org.apache.tomcat-apache-tomcat-zip-windows-x64-8.0.36-atlassian-hosted.marker
 myConfluenceMacro/target/confluence/
 myConfluenceMacro/target/container/
+
