--- a/myConfluenceMacro/pom.xml
+++ b/myConfluenceMacro/pom.xml
@@ -10,11 +10,11 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <organization>
-        <name>Atlassian SDK Tutorial</name>
-        <url>http://developer.atlassian.com/</url>
+        <name>ExCon Group</name>
+        <url>https://tcomkproj2017.wixsite.com/project</url>
     </organization>
 
-    <name>myConfluenceMacro</name>
+    <name>ExCon PLugin</name>
     <description>This is the com.atlassian.tutorial:myConfluenceMacro plugin for Atlassian Confluence.</description>
     <packaging>atlassian-plugin</packaging>
 
